--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,18 @@
+/* Font Face Declarations */
+@font-face {
+  font-family: "UAESymbol";
+  src: url("/fonts/font.woff2") format("woff2"),
+    url("/fonts/font.woff") format("woff"),
+    url("/fonts/font.ttf") format("truetype");
+}
+
+/* Dirham Symbol Class */
+.dirham-symbol {
+  font-family: "UAESymbol", sans-serif;
+  font-size: inherit;
+  color: inherit;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -133,7 +148,7 @@
  * Base typography. This is not applied to elements which have an ancestor with a Tailwind text class.
  */
 @layer base {
-  :where(:not(:has([class*=' text-']), :not(:has([class^='text-'])))) {
+  :where(:not(:has([class*=" text-"]), :not(:has([class^="text-"])))) {
     h1 {
       font-size: var(--text-2xl);
       font-weight: var(--font-weight-medium);
